--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "search-index-matcher",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A matcher that generates its content from a search-index",
-  "main": "lib/matcher.js",
+  "main": "matcher.js",
   "scripts": {
     "test": "tape"
   },
