--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "search-index-matcher",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A matcher that generates its content from a search-index",
   "main": "matcher.js",
   "scripts": {
@@ -24,8 +24,13 @@
   },
   "homepage": "https://github.com/fergiemcdowall/search-index-matcher#readme",
   "dependencies": {
+    "async": "^1.5.2",
+    "bunyan": "^1.6.0",
     "highland": "^2.6.0",
+    "leveldown": "^1.4.4",
+    "levelup": "^1.3.1",
     "lodash": "^4.0.0",
-    "log-skeleton": "^1.1.0"
+    "log-skeleton": "^1.1.0",
+    "term-vector": "0.0.12"
   }
 }
