--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "search-index-matcher",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A matcher that generates its content from a search-index",
   "main": "matcher.js",
   "scripts": {
-    "test": "tape"
+    "test": "rm -rf test/sandbox && mkdir test/sandbox && mocha"
   },
   "repository": {
     "type": "git",
@@ -29,8 +29,13 @@
     "highland": "^2.6.0",
     "leveldown": "^1.4.4",
     "levelup": "^1.3.1",
-    "lodash": "^4.0.0",
+    "lodash": "^4.5.0",
     "log-skeleton": "^1.1.0",
     "term-vector": "0.0.12"
+  },
+  "devDependencies": {
+    "mocha": "^2.4.5",
+    "search-index-adder": "0.0.10",
+    "should": "^8.2.2"
   }
 }
