--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A matcher that generates its content from a search-index",
   "main": "matcher.js",
   "scripts": {
-    "test": "rm -rf test/sandbox && mkdir test/sandbox && mocha"
+    "test": "rm -rf test/sandbox && mkdir test/sandbox && mocha && standard"
   },
   "repository": {
     "type": "git",
@@ -24,19 +24,18 @@
   },
   "homepage": "https://github.com/fergiemcdowall/search-index-matcher#readme",
   "dependencies": {
-    "async": "^1.5.2",
     "bunyan": "^1.8.1",
     "highland": "^2.7.4",
     "leveldown": "^1.4.6",
     "levelup": "^1.3.1",
     "lodash.defaults": "^4.0.1",
-    "lodash.isplainobject": "^4.0.4",
     "log-skeleton": "^1.1.0",
     "term-vector": "0.0.18"
   },
   "devDependencies": {
     "mocha": "^2.4.5",
     "search-index-adder": "0.0.22",
-    "should": "^8.3.1"
+    "should": "^8.3.1",
+    "standard": "^8.0.0"
   }
 }
