--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "levelup": "^1.3.1",
     "lodash.defaults": "^4.0.1",
     "log-skeleton": "^1.1.0",
+    "stopword": "0.0.7",
     "term-vector": "0.0.18"
   },
   "devDependencies": {
